<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_overview">

    <fragment
        android:id="@+id/navigation_overview"
        android:name="com.example.pockettale.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.pockettale.ui.transaction.TransactionFragment"
        android:label="@string/title_Transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_summaries"
        android:name="com.example.pockettale.ui.summaries.SummariesFragment"
        android:label="@string/title_summaries"
        tools:layout="@layout/fragment_summaries" />

    <fragment
        android:id="@+id/navigation_features"
        android:name="com.example.pockettale.ui.features.FeaturesFragment"
        android:label="@string/title_features"
        tools:layout="@layout/fragment_features" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.pockettale.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

</navigation>